--- a/csce242/assignments/assignment09/index.html
+++ b/csce242/assignments/assignment09/index.html
@@ -10,6 +10,12 @@
     <button id="drawStairs">Draw Stairs</button>
     <p id="author">@durantchristian.com</p>
     <div id="container"></div>
+    
+    <div id="controls">
+        <button id="climbStairs">Climb Stairs</button>
+        <p id="authorMove">@durantchristian.com</p>
+    </div>
+
     <img id="stickFigure" src="/csce242/assignments/assignment09/images/left.png" alt="Stick Figure" style="display:none; width: 50px;">
     <button id="climbStairs" style="display:none;">Climb Stairs</button>
     <script src="script.js"></script>
