--- a/csce242/assignments/assignment09/index.html
+++ b/csce242/assignments/assignment09/index.html
@@ -9,12 +9,15 @@
     <h3>For Loops</h3>
     <button id="drawStairs">Draw Stairs</button>
     <p id="author">@durantchristian.com</p>
-    <div id="container"></div>
-
-    <div id="controls">
+    <div id="container">
         <button id="climbStairs">Climb Stairs</button>
         <p id="authorMove">@durantchristian.com</p>
     </div>
+
+    <!-- <div id="controls">
+        <button id="climbStairs">Climb Stairs</button>
+        <p id="authorMove">@durantchristian.com</p>
+    </div> -->
 
     <img id="stickFigure" src="/csce242/assignments/assignment09/images/left.png" alt="Stick Figure" style="display:none; width: 50px;">
     <script src="script.js"></script>
