--- a/csce242/index.html
+++ b/csce242/index.html
@@ -47,6 +47,13 @@
           </div>
 
           <div class="assignment">
+            <a href="https://durantchristian.github.io/csce242/assignments/assignment09/index.html">
+            <h3>Assignment 9 - Java Script: Loops</h3>
+              <img src="images/assignment09SS.png" alt="Assignment 9 Preview">
+          </a>
+          </div>
+
+          <div class="assignment">
             <a href="https://durantchristian.github.io/csce242/assignments/assignment10/index.html">
             <h3>Assignment 10 - Java Script: Arrays</h3>
               <img src="images/assignment10SS.png" alt="Assignment 10 Preview">
