--- a/csce242/assignments/assignment10/index.html
+++ b/csce242/assignments/assignment10/index.html
@@ -9,7 +9,7 @@
         <h2>Arrays</h2>
         <div id="titlesContainer"></div>
         <div id="popup" class="popup">
-            <button class="close-btn" onclick="closePopup()">×</button>
+            <span id="close" onclick="closePopup()">&#10006;</span>
             <h3 id="popupTitle"></h3>
             <img id="popupImage" src="" alt="">
         </div>
