added improved website

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -90,6 +90,13 @@
               <img src="images/projectpart4SS.png" alt="Project part 4 Preview">
           </a>
           </div>
+
+          <div class="project">
+            <a href="https://durantchristian.github.io/csce242/projects/part4/index.html">
+            <h3>Project 1 part 5 - Projects: Improve Website</h3>
+              <img src="images/projectpart5SS.png" alt="Project part 5 Preview">
+          </a>
+          </div>
           
         </section>
       </div>
