--- a/csce242/assignments/assignment11/index.html
+++ b/csce242/assignments/assignment11/index.html
@@ -7,13 +7,17 @@
     <body>
         <h1>Assignment 11</h1>
         <h2>Classes</h2>
-        <div class="container" id="pizzaContainer"></div>
+        <div class="pizza-box">
+            <div class="container" id="pizzaContainer"></div>
+        </div>
 <div class="modal" id="pizzaModal">
     <div class="modal-content" id="modalContent">
         <span class="close" onclick="closeModal()">&#10006;</span>
         <h2 id="modalTitle"></h2>
         <img id="modalImage" src="" alt="Pizza Image">
         <p><strong>Ingredients:</strong> <span id="modalIngredients"></span></p>
+        <p><strong>Sauce:</strong> <span id="modalSauce"></span></p>
+        <p><strong>Cheese:</strong> <span id="modalCheese"></span></p>
         <p><strong>Price:</strong> $<span id="modalPrice"></span></p>
     </div>
 </div>
