--- a/csce242/assignments/assignment11/index.html
+++ b/csce242/assignments/assignment11/index.html
@@ -21,7 +21,7 @@
         <p><strong>Price:</strong> $<span id="modalPrice"></span></p>
     </div>
 </div>
-<p class="credits">Images from <a href="https://www.freepik.com/" target="_blank">FreePik</a></p>
+<p class="credits">Images from FreePik</p>
 <script src="script.js"></script>
 </body>
 </html>
