--- a/csce242/assignments/assignment11/index.html
+++ b/csce242/assignments/assignment11/index.html
@@ -10,18 +10,20 @@
         <div class="pizza-box">
             <div class="container" id="pizzaContainer"></div>
         </div>
-<div class="modal" id="pizzaModal">
-    <div class="modal-content" id="modalContent">
-        <span class="close" onclick="closeModal()">&#10006;</span>
-        <h2 id="modalTitle"></h2>
-        <img id="modalImage" src="" alt="Pizza Image">
-        <p><strong>Ingredients:</strong> <span id="modalIngredients"></span></p>
-        <p><strong>Sauce:</strong> <span id="modalSauce"></span></p>
-        <p><strong>Cheese:</strong> <span id="modalCheese"></span></p>
-        <p><strong>Price:</strong> $<span id="modalPrice"></span></p>
-    </div>
-</div>
-<p class="credits">Images from FreePik</p>
-<script src="script.js"></script>
-</body>
+        <div class="modal" id="pizzaModal">
+            <div class="modal-content" id="modalContent">
+                <span class="close" onclick="closeModal()">&times;</span>
+                <div class="text">
+                    <h2 id="modalTitle"></h2>
+                    <p><strong>Ingredients:</strong> <span id="modalIngredients"></span></p>
+                    <p><strong>Sauce:</strong> <span id="modalSauce"></span></p>
+                    <p><strong>Cheese:</strong> <span id="modalCheese"></span></p>
+                    <p><strong>Price:</strong> $<span id="modalPrice"></span></p>
+                </div>
+                <img id="modalImage" src="" alt="Pizza Image">
+            </div>
+        </div>
+    <p class="credits">Images from FreePik</p>
+    <script src="script.js"></script>
+    </body>
 </html>
