--- a/csce242/index.html
+++ b/csce242/index.html
@@ -59,6 +59,13 @@
               <img src="images/assignment10SS.png" alt="Assignment 10 Preview">
           </a>
           </div>
+
+          <div class="assignment">
+            <a href="https://durantchristian.github.io/csce242/assignments/assignment11/index.html">
+            <h3>Assignment 10 - Java Script: Classes</h3>
+              <img src="images/assignment11SS.png" alt="Assignment 11 Preview">
+          </a>
+          </div>
         </section>
 
         <h2 id="projects-heading">Projects</h2>
