--- a/csce242/04_js_intro/index.html
+++ b/csce242/04_js_intro/index.html
@@ -15,12 +15,11 @@
                         <div></div>
                         <div></div>
                     </div>
-                    <ul id="nav-items" class="columns hide-small">
+                    <ul class="columns hide-small">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="js-intro.html">JS Intro</a></li>
-                        <li><a href="loops.html">Loops</a></li>
-                        <li><a href="classes.html">Classes</a></li>
-                        <li><a href="jsons.html">json Parsing</a></li>
+                        <li><a href="coding.html">JavaScript</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Contact</a></li>
                     </ul>
                 </nav>
                 <nav id="sub-nav">
@@ -129,6 +128,12 @@
                             <p>Hi Portia</p>
                         </section>
                     </section>
+                    <section>
+                        <p>
+                            <label for="textbox">Enter color:</label>
+                            <input type="text" id="textbox" name="textbox">
+                        </p>
+                    </section>
                 </div>
                 <div id="animation-fun">
                     <h3>Let's Animate</h3>
@@ -139,6 +144,5 @@
                 <p>&copy; myname</p>
             </footer>
         </div>
-        <script src="js/slideshow.js"></script>
     </body>
 </html>
