added slideshow ex

--- a/csce242/04_js_intro/js/index.html
+++ b/csce242/04_js_intro/js/index.html
@@ -66,22 +66,22 @@
                 </section>
                 <div class="columns">
                     <section class="two gallery columns">
-                        <section class="tile">
+                        <section class="mouse">
                             <h4>Title</h4>
                             <img src="https://picsum.photos/100">
                             <p>Hi Portia</p>
                         </section>
-                        <section class="tile">
+                        <section class="bunny">
                             <h4>Title</h4>
                             <img src="https://picsum.photos/100">
                             <p>Hi Portia</p>
                         </section>
-                        <section class="tile">
+                        <section class="funny">
                             <h4>Title</h4>
                             <img src="https://picsum.photos/100">
                             <p>Hi Portia</p>
                         </section>
-                        <section class="tile">
+                        <section class="phone">
                             <h4>Title</h4>
                             <img src="https://picsum.photos/100">
                             <p>Hi Portia</p>
@@ -98,22 +98,22 @@
                         </ul>
                     </section>
                     <section class="three gallery columns">
-                        <section class="node">
+                        <section class="car">
                             <h4>Title</h4>
                             <img src="https://picsum.photos/100">
                             <p>Hi Portia</p>
                         </section>
-                        <section class="node">
+                        <section class="dog">
                             <h4>Title</h4>
                             <img src="https://picsum.photos/100">
                             <p>Hi Portia</p>
                         </section>
-                        <section class="node">
+                        <section class="cat">
                             <h4>Title</h4>
                             <img src="https://picsum.photos/100">
                             <p>Hi Portia</p>
                         </section>
-                        <section class="node">
+                        <section class="bike">
                             <h4>Title</h4>
                             <img src="https://picsum.photos/100">
                             <p>Hi Portia</p>
@@ -139,6 +139,7 @@
                 <p>&copy; myname</p>
             </footer>
         </div>
+        <script src="js/slideshow.js"></script>
         <script src="js/slideshow.js"></script>
     </body>
 </html>
