--- a/csce242/projects/part5/reviews.html
+++ b/csce242/projects/part5/reviews.html
@@ -62,6 +62,27 @@
                 <p>A mind-bending puzzle game that challenges your problem-solving abilities with humor.</p>
                 <a href="#">Read More</a>
             </div>
+            <div class="review">
+                <a href="https://th.bing.com/th/id/OIP.-d1p2Hl7wIaVAbXcnwAi8gHaHa?w=178&h=180&c=7&r=0&o=5&dpr=2&pid=1.7">
+                <img src="/csce242/projects/part5/images/fortnitecover.png" alt="Fortnite"></a>
+                <h3>Fortnite</h3>
+                <p>A action pack first-person shooter that offers a variety of multiplayer experiences.</p>
+                <a href="#">Read More</a>
+            </div>
+            <div class="review">
+                <a href="https://th.bing.com/th/id/OIP.q3f8gyBPvNpIXNxDrrKJfgHaLH?w=121&h=182&c=7&r=0&o=5&dpr=2&pid=1.7">
+                <img src="/csce242/projects/part5/images/minecraft.png" alt="Minecraft"></a>
+                <h3>Minecraft</h3>
+                <p>A creative game where you can build your own world and have fun with friends.</p>
+                <a href="#">Read More</a>
+            </div>
+            <div class="review">
+                <a href="https://th.bing.com/th/id/OIP.OTfX_Ps333yQWE_mIBqeiQHaHa?w=202&h=202&c=7&r=0&o=5&dpr=2&pid=1.7">
+                <img src="/csce242/projects/part5/images/sims.png" alt="Sims 4"></a>
+                <h3>Sims 4</h3>
+                <p>A open world futuristic game.</p>
+                <a href="#">Read More</a>
+            </div>
         </section>
     </main>
     <script src="script.js"></script>
