--- a/csce242/projects/part5/reviews.html
+++ b/csce242/projects/part5/reviews.html
@@ -40,7 +40,9 @@
         </section>
 
         <section class="game-reviews">
+            <div>
             <h2>Latest Game Reviews</h2>
+            </div>
             <div class="review">
                 <a href="https://image.api.playstation.com/vulcan/ap/rnd/202211/0711/kh4MUIuMmHlktOHar3lVl6rY.png">
                 <img src="/csce242/projects/part5/images/witcher3.png" alt="The Witcher 3"></a>
