edited reviews on website

--- a/csce242/projects/part5/reviews.html
+++ b/csce242/projects/part5/reviews.html
@@ -63,7 +63,7 @@
                 <a href="#">Read More</a>
             </div>
             </section>
-            <section class="game-reviews">
+            <section>
             <div class="review">
                 <a href="https://th.bing.com/th/id/OIP.-d1p2Hl7wIaVAbXcnwAi8gHaHa?w=178&h=180&c=7&r=0&o=5&dpr=2&pid=1.7">
                 <img src="/csce242/projects/part5/images/fortnitecover.png" alt="Fortnite"></a>
