edited reviews on website

--- a/csce242/projects/part5/reviews.html
+++ b/csce242/projects/part5/reviews.html
@@ -62,8 +62,6 @@
                 <p>A mind-bending puzzle game that challenges your problem-solving abilities with humor.</p>
                 <a href="#">Read More</a>
             </div>
-            </section>
-            <section>
             <div class="review">
                 <a href="https://th.bing.com/th/id/OIP.-d1p2Hl7wIaVAbXcnwAi8gHaHa?w=178&h=180&c=7&r=0&o=5&dpr=2&pid=1.7">
                 <img src="/csce242/projects/part5/images/fortnitecover.png" alt="Fortnite"></a>
@@ -83,6 +81,20 @@
                 <img src="/csce242/projects/part5/images/sims.png" alt="Sims 4"></a>
                 <h3>Sims 4</h3>
                 <p>A open world futuristic game.</p>
+                <a href="#">Read More</a>
+            </div>
+            <div class="review">
+                <a href="https://th.bing.com/th/id/OIP.yJirbyWKnLNEVvWDciCxPQAAAA?w=155&h=220&c=7&r=0&o=5&dpr=2&pid=1.7">
+                <img src="/csce242/projects/part5/images/eldenring.png" alt="Elden Ring"></a>
+                <h3>Elden Ring</h3>
+                <p>A dark and mysterious world filled of adventures game.</p>
+                <a href="#">Read More</a>
+            </div>
+            <div class="review">
+                <a href="https://th.bing.com/th/id/OIP.XuuZ9U8X2G2ENh2t1380GwHaEK?w=318&h=180&c=7&r=0&o=5&dpr=2&pid=1.7">
+                <img src="/csce242/projects/part5/images/gamble.png" alt="Casino"></a>
+                <h3>Casino</h3>
+                <p>A thrilling and risky gambling game.</p>
                 <a href="#">Read More</a>
             </div>
         </section>
