--- a/csce242/projects/part6/reviews.html
+++ b/csce242/projects/part6/reviews.html
@@ -41,7 +41,7 @@
 
         <h2>Latest Game Reviews</h2>
         <section class="game-reviews">
-            <div class="review">
+            <!-- <div class="review">
                 <a href="https://image.api.playstation.com/vulcan/ap/rnd/202211/0711/kh4MUIuMmHlktOHar3lVl6rY.png">
                 <img src="/csce242/projects/part6/images/witcher3.png" alt="The Witcher 3"></a>
                 <h3>The Witcher 3</h3>
@@ -96,7 +96,7 @@
                 <h3>Casino</h3>
                 <p>A thrilling and risky gambling game.</p>
                 <a href="#">Read More</a>
-            </div>
+            </div> -->
         </section>
     </main>
     <script src="script.js"></script>
