edited project1 part6

--- a/csce242/projects/part6/reviews.html
+++ b/csce242/projects/part6/reviews.html
@@ -40,7 +40,7 @@
         </section>
 
         <h2>Latest Game Reviews</h2>
-        <section class="game-reviews">
+        <section id="reviews-container" class="game-reviews">
             
         </section>
     </main>
