--- a/csce242/04_js_intro/js/json-breweries.html
+++ b/csce242/04_js_intro/js/json-breweries.html
@@ -34,7 +34,7 @@
                 <h2>JSON Breweries</h2>
             </header>
             <main class="columns">
-                <section id="breweries-section">
+                <section id="breweries">
                     
                 </section>
             </main>
