--- a/csce242/04_js_intro/js/json-breweries.html
+++ b/csce242/04_js_intro/js/json-breweries.html
@@ -42,6 +42,6 @@
                 <p>&copy; myname</p>
             </footer>
         </div>
-        <script src="js/json-breweries.js"></script>
+        <script src="json-breweries.js"></script>
     </body>
 </html>
