added project part6

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -103,6 +103,12 @@
             <h3>Project 1 part 5 - Projects: Improve Website</h3>
               <img src="images/projectpart5SS.png" alt="Project part 5 Preview">
           </a>
+
+          <div class="project">
+            <a href="https://durantchristian.github.io/csce242/projects/part6/index.html">
+            <h3>Project 1 part 6 - Projects: JSON File Parsoning</h3>
+              <img src="images/projectpart6SS.png" alt="Project part 6 Preview">
+          </a>
           </div>
           
         </section>
