edited project part6

--- a/csce242/projects/part6/shop.html
+++ b/csce242/projects/part6/shop.html
@@ -38,7 +38,7 @@
         <h2>Hot Games</h2>
         <div class="games-grid">
             <div class="game-item">
-                <a href="https://image.api.playstation.com/vulcan/ap/rnd/202211/0711/kh4MUIuMmHlktOHar3lVl6rY.png">
+                <a href="https://th.bing.com/th/id/OIP.V5P6rt3DNfJQqfjzX4sBAQHaEK?rs=1&pid=ImgDetMain">
                 <img src="/csce242/projects/part6/images/witcher3.png" alt="Game"></a>
                 <p><strong>The Witcher 3</strong></p>
                 <p>Best RPG</p>
