edited project part6 on main page

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -103,6 +103,7 @@
             <h3>Project 1 part 5 - Projects: Improve Website</h3>
               <img src="images/projectpart5SS.png" alt="Project part 5 Preview">
           </a>
+          </div>
 
           <div class="project">
             <a href="https://durantchristian.github.io/csce242/projects/part6/index.html">
