added helloworld app with render

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -66,6 +66,17 @@
               <img src="images/assignment11SS.png" alt="Assignment 11 Preview">
           </a>
           </div>
+
+          <div class="assignment">
+            <a href="https://your-live-demo-url-on-render.com" target="_blank">
+                <h3>Assignment 12 - Setup Assignment 2: Server Side HelloWorld</h3>
+                <img src="images/assignment12SS.png" alt="Assignment 12 Preview">
+            </a>
+          <div class="links">
+              <a href="https://github.com/DurantChristian/hello_world_server_side" target="_blank"><strong>Code Repo</strong></a>
+                <br>
+              <a href="https://hello-world-server-side-ck3h.onrender.com/" target="_blank"><strong>Live Demo</strong></a>
+          </div>
         </section>
 
         <h2 id="projects-heading">Projects</h2>
