added contact form and java script to main page

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -120,6 +120,13 @@
               <img src="images/projectpart6SS.png" alt="Project part 6 Preview">
           </a>
           </div>
+
+          <div class="project">
+            <a href="https://durantchristian.github.io/csce242/projects/part7/index.html">
+            <h3>Project 1 part 7 - Projects: Contact Form and Javascript</h3>
+              <img src="images/projectpart7SS.png" alt="Project part 7 Preview">
+          </a>
+          </div>
           
         </section>
       </div>
