edited contact form for success pop up

--- a/csce242/projects/part7/about&contact.html
+++ b/csce242/projects/part7/about&contact.html
@@ -100,5 +100,6 @@
         </section>
     </main>
     <script src="script.js"></script>
+    <script src="contactform.js"></script>
 </body>
 </html>
