edited contact form for trobuleshoot

--- a/csce242/projects/part7/about&contact.html
+++ b/csce242/projects/part7/about&contact.html
@@ -68,7 +68,7 @@
                 </select>
 
                 <label for="subject">Subject:</label>
-                <input type="text" id="subject" name="subject" required>
+                <input type="text" id="subject" name="subject">
 
                 <label for="message">Message:</label>
                 <textarea id="message" name="message" required></textarea>
