edited contact form for trobuleshoot

--- a/csce242/projects/part7/about&contact.html
+++ b/csce242/projects/part7/about&contact.html
@@ -79,7 +79,7 @@
 
                 <button type="submit">Send</button>
                 <button type="reset">Cancel</button>
-                <p id="result"></p>
+                <p id="responseMessage"></p>
             </form>
 
             <h3>Visit Our Store</h3>
