--- a/csce242/projects/part7/about&contact.html
+++ b/csce242/projects/part7/about&contact.html
@@ -48,7 +48,7 @@
             <h2>Contact Us</h2>
             <p>Need help with an order or have a question? Our team is here for you!</p>
 
-            <form id="contact-form" action="https://api.web3forms.com/submit" method="POST">
+            <form id="contact-form">
                 <input type="hidden" name="access_key" value="817cffc5-dfd0-4c25-8906-e6530a0c8308">
 
                 <label for="name">Name:</label>
@@ -79,7 +79,7 @@
 
                 <button type="submit">Send</button>
                 <button type="reset">Cancel</button>
-                <p id="responseMessage" class="message"></p>
+                <div id="result"></div>
             </form>
 
             <h3>Visit Our Store</h3>
