edited contact form

--- a/csce242/projects/part7/about&contact.html
+++ b/csce242/projects/part7/about&contact.html
@@ -58,7 +58,7 @@
                 <input type="email" id="email" name="email" required>
 
                 <label for="phone">Phone Number:</label>
-                <input type="tel" id="phone" name="phone">
+                <input type="tel" id="phone" name="phone" required>
 
                 <label for="contact-method">Preferred Contact Method:</label>
                 <select id="contact-method" name="contact-method">
@@ -68,7 +68,7 @@
                 </select>
 
                 <label for="subject">Subject:</label>
-                <input type="text" id="subject" name="subject">
+                <input type="text" id="subject" name="subject" required>
 
                 <label for="message">Message:</label>
                 <textarea id="message" name="message" required></textarea>
