--- a/csce242/index.html
+++ b/csce242/index.html
@@ -127,6 +127,13 @@
               <img src="images/projectpart7SS.png" alt="Project part 7 Preview">
           </a>
           </div>
+
+          <div class="project">
+            <a href="http://localhost:3000/DurantChristian/react-gaming">
+            <h3>Project 1 part 8 - Projects: React site components and pages</h3>
+              <img src="images/projectpart8SS.png" alt="Project part 8 Preview">
+          </a>
+          </div>
           
         </section>
       </div>
