added project8 to main

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -129,7 +129,7 @@
           </div>
 
           <div class="project">
-            <a href="http://localhost:3000/DurantChristian/react-gaming">
+            <a href="https://durantchristian.github.io/react-gaming">
             <h3>Project 1 part 8 - Projects: React site components and pages</h3>
               <img src="images/projectpart8SS.png" alt="Project part 8 Preview">
           </a>
