--- a/csce242/index.html
+++ b/csce242/index.html
@@ -134,6 +134,21 @@
               <img src="images/projectpart8SS.png" alt="Project part 8 Preview">
           </a>
           </div>
+
+          <div class="project">
+              <h3>Project 1 part 9 - Projects: More JS and Server Get Request</h3>
+              <img src="images/projectpart8SS.png" alt="Project part 9 Preview">
+            
+            <div class="project-links">
+              <p>
+                <strong>Links:</strong><br>
+                 <a href="https://github.com/DurantChristian/Serverside-code">Server-side GitHub Repo</a><br>
+                 <a href="https://serverside-code.onrender.com/">Live Server on Render</a><br>
+                 <a href="https://github.com/DurantChristian/react-gaming">Client-side GitHub Repo</a><br>
+                 <a href="https://durantchristian.github.io/react-gaming">Live Client Site</a>
+              </p>
+            </div>
+          </div>
           
         </section>
       </div>
