--- a/csce242/index.html
+++ b/csce242/index.html
@@ -139,7 +139,7 @@
               <h3>Project 1 part 9 - Projects: More JS and Server Get Request</h3>
               <img src="images/projectpart8SS.png" alt="Project part 9 Preview">
             
-            <div class="project-links">
+            <div class="links">
               <p>
                 <strong>Links:</strong><br>
                  <a href="https://github.com/DurantChristian/Serverside-code">Server-side GitHub Repo</a><br>
