updated index page

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -71,9 +71,9 @@
               <h3>Assignment 12 - Setup Assignment 2: Server Side HelloWorld</h3>
               <img src="images/assignment12SS.png" alt="Assignment 12 Preview">
           <div class="links">
-              <a href="https://github.com/DurantChristian/hello_world_server_side" target="_blank"><strong>Code Repo</strong></a>
+              <a href="https://github.com/DurantChristian/hello_world_server_side">Code Repo</a>
                 <br>
-              <a href="https://hello-world-server-side-ck3h.onrender.com/" target="_blank"><strong>Live Demo</strong></a>
+              <a href="https://hello-world-server-side-ck3h.onrender.com/">Live Demo</a>
           </div>
         </section>
 
@@ -129,10 +129,11 @@
           </div>
 
           <div class="project">
-            <a href="https://durantchristian.github.io/react-gaming">
             <h3>Project 1 part 8 - Projects: React site components and pages</h3>
               <img src="images/projectpart8SS.png" alt="Project part 8 Preview">
-          </a>
+              <a href="https://durantchristian.github.io/react-gaming">Live Client Site</a>
+              <br>
+              <a href="https://github.com/DurantChristian/react-gaming">Client-side GitHub Repo</a>
           </div>
 
           <div class="project">
