edited main page

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -131,9 +131,11 @@
           <div class="project">
             <h3>Project 1 part 8 - Projects: React site components and pages</h3>
               <img src="images/projectpart8SS.png" alt="Project part 8 Preview">
+            <div class="links">
               <a href="https://durantchristian.github.io/react-gaming">Live Client Site</a>
               <br>
               <a href="https://github.com/DurantChristian/react-gaming">Client-side GitHub Repo</a>
+          </div>
           </div>
 
           <div class="project">
