added edit and delete request

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -161,6 +161,18 @@
                <a href="https://durantchristian.github.io/react-gaming">Live Client Site</a>
           </div>
         </div>
+
+        <div class="project">
+          <h3>Project 1 part 11 - Projects: Edit and Delete Request</h3>
+          <img src="images/projectpart11SS.png" alt="Project part 11 Preview">
+        
+        <div class="links">
+             <a href="https://github.com/DurantChristian/Serverside-code">Server-side GitHub Repo</a><br>
+             <a href="https://serverside-code.onrender.com/">Live Server on Render</a><br>
+             <a href="https://github.com/DurantChristian/react-gaming">Client-side GitHub Repo</a><br>
+             <a href="https://durantchristian.github.io/react-gaming">Live Client Site</a>
+        </div>
+      </div>
           
         </section>
       </div>
