--- a/csce242/index.html
+++ b/csce242/index.html
@@ -173,6 +173,18 @@
              <a href="https://durantchristian.github.io/react-gaming">Live Client Site</a>
         </div>
       </div>
+
+      <div class="project">
+        <h3>Project 1 part 12 - MongoDB: Persistent Data</h3>
+        <img src="images/projectpart12SS.png" alt="Project part 12 Preview">
+      
+      <div class="links">
+           <a href="https://github.com/DurantChristian/Serverside-code">Server-side GitHub Repo</a><br>
+           <a href="https://serverside-code.onrender.com/">Live Server on Render</a><br>
+           <a href="https://github.com/DurantChristian/react-gaming">Client-side GitHub Repo</a><br>
+           <a href="https://durantchristian.github.io/react-gaming">Live Client Site</a>
+      </div>
+    </div>
           
         </section>
       </div>
